@@ -23,7 +23,17 @@ import org.hiero.otter.test.performance.benchmark.ConsensusLayerBenchmark.Benchm
  */
 @SuppressWarnings("NewClassNamingConvention")
 @OtterSpecs(randomNodeIds = false)
-@ContainerSpecs(proxyEnabled = false)
+@ContainerSpecs(
+        proxyEnabled = false,
+        gcLogging = true,
+        jvmArgs = {
+            "-XX:+UseZGC",
+            "-XX:+ZGenerational",
+            "-XX:+AlwaysPreTouch",
+            "-XX:ConcGCThreads=4",
+            "-Xms16g",
+            "-Xmx16g"
+        })
 public class CombinedOptimizationsExperiment {
 
     private static final Logger log = LogManager.getLogger(CombinedOptimizationsExperiment.class);
@@ -40,7 +50,7 @@ public class CombinedOptimizationsExperiment {
             network.withConfigValue("event.creation.maxOtherParents", DEFAULTS.numberOfNodes())
                     .withConfigValue("event.creation.antiSelfishnessFactor", 8)
                     .withConfigValue("event.creation.maxCreationRate", 0)
-                    .withConfigValue("event.creation.creationAttemptRate", 1000)
+                    .withConfigValue("event.creation.period", "400us")
                     .withConfigValue("broadcast.enableBroadcast", true);
 
             // Use ED25519 for faster signing
